# pattern-to-rule-automation

./: README.md  README_CN.md  pyproject.toml
src/pra/: __init__.py  api.py  cli.py  config.py  core.py  patterns.py
src/pra/analyzer/: __init__.py  confidence.py
src/pra/generator/: __init__.py  rule_generator.py
src/pra/scanner/: __init__.py  knowledge_base.py
src/pra/storage/: __init__.py  database.py
tests/: test_api.py  test_core.py
